--- a/css/BootSideMenu.css
+++ b/css/BootSideMenu.css
@@ -18,7 +18,7 @@
     bottom: 0;
     top: 0;
     overflow: auto;
-	width: 100%;
+    width: 100%;
 }
 
 .bootsidemenu > .row {
@@ -27,19 +27,18 @@
 
 .bootsidemenu {
     /*width: auto;*/
-	min-width: unset;
+    min-width: unset;
 }
 
 .bootsidemenu.bootsidemenu-left {
     left: 0;
-    right: auto;/*20px;*/
+    right: auto; /*20px;*/
 }
 
 .bootsidemenu.bootsidemenu-right {
     right: 0;
-    left: auto;/*20px;*/
+    left: auto; /*20px;*/
 }
-
 
 .toggler {
     -webkit-background-clip: padding-box;
@@ -50,7 +49,7 @@
     position: absolute;
     top: 47%;
     cursor: pointer;
-	background-color: #fff;
+    background-color: #fff;
 }
 
 .bootsidemenu-left > .toggler {
@@ -61,8 +60,8 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border-left: 1px solid #fff;
-    -webkit-box-shadow: 1px 0px 8px rgba(0, 0, 0, .175);
-    box-shadow: 1px 0px 8px rgba(0, 0, 0, .175);
+    -webkit-box-shadow: 1px 0 8px rgba(0, 0, 0, .175);
+    box-shadow: 1px 0 8px rgba(0, 0, 0, .175);
     right: -20px;
 }
 
@@ -78,8 +77,8 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border-right: 1px solid #fff;
-    -webkit-box-shadow: -1px 0px 8px rgba(0, 0, 0, .175);
-    box-shadow: -1px 0px 8px rgba(0, 0, 0, .175);
+    -webkit-box-shadow: -1px 0 8px rgba(0, 0, 0, .175);
+    box-shadow: -1px 0 8px rgba(0, 0, 0, .175);
     left: -20px;
 }
 
@@ -88,6 +87,10 @@
 }
 
 /*Native BootStrap Hack*/
+.bootsidemenu .list-group, .bootsidemenu .list-group-item {
+    background-color: transparent;
+}
+
 .bootsidemenu .list-group-item:last-child, .bootsidemenu .list-group-item:first-child {
     border-radius: 0;
 }
@@ -108,66 +111,64 @@
     padding-left: 25px;
 }
 
-.list-group-item .glyphicon {
+.list-group-item .icon {
     margin-right: 5px;
 }
 
-
 /*==========  Media queries for test ==========*/
 
-/* Custom, iPhone Retina */ 
-@media only screen and (min-width : 320px) {
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
 
 }
 
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 480px) {
 
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
+@media only screen and (min-width: 768px) {
 
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
+@media only screen and (min-width: 992px) {
 
 }
 
 /* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
+@media only screen and (min-width: 1200px) {
 
 }
-
 
 /*==========  Non-Mobile First Method  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) {
+@media only screen and (max-width: 1200px) {
 
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width: 992px) {
 
 }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
     .bootsidemenu {
         min-width: 200px;
     }
 }
 
-/* Extra Small Devices, Phones */ 
-@media only screen and (max-width : 480px) {
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
     .bootsidemenu {
         min-width: 90%;
     }
 }
 
-/* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) {
+/* Custom, iPhone Retina */
+@media only screen and (max-width: 320px) {
 
 }
