Added methods for remote control
Solved bug introduced with theme functionality:
active elements lost background color

--- a/css/BootSideMenu.css
+++ b/css/BootSideMenu.css
@@ -172,3 +172,59 @@
 @media only screen and (max-width: 320px) {
 
 }
+
+/*========== Theme Default ==========*/
+.default {
+    background-color: #FFFFFF;
+    color: #555555;
+}
+
+.default .toggler {
+    background-color: #FFFFFF;
+}
+
+.default a,
+.default a:hover,
+.default a:visited {
+    color: #337ab7;
+}
+
+.default.bootsidemenu-left,
+.default.bootsidemenu-right,
+.default.bootsidemenu-left > .toggler,
+.default.bootsidemenu-right > .toggler {
+    border-color: rgba(0, 0, 0, .15);
+}
+
+.default.bootsidemenu-right > .toggler {
+    border-right:0;
+}
+
+.default.bootsidemenu-left > .toggler {
+    border-left:0;
+}
+
+.default .list-group-item.active,
+.default .list-group-item.active:focus,
+.default .list-group-item.active:hover,
+.default .item.active:focus {
+    color: #FFFFFF;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.default a.list-group-item {
+    color: #555555;
+}
+
+.default a.list-group-item:focus,
+.default a.list-group-item:hover,
+.default button.list-group-item:focus,
+.default button.list-group-item:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+/*========== Theme Default ==========*/
